# ebpf-spice-cookie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bpf-loader.cc  bpf-loader.h  build.sh  client.h  common.h  ebpf-kern.c  main-bcc.cc  main.cc  server.cc  server.h
